src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Synced_from_Outreach__c</fullName>
        <businessOwnerUser>stephen.depaoli@neo4j.com.trnnadia</businessOwnerUser>
        <description>This field is part of the Salesforce and Outreach integration. Will display &quot;1&quot; when a record is synced from Outreach to Salesforce. Do NOT change field type to Checkbox -- in Outreach custom fields are &quot;Text&quot; only, so the target field in Salesforce must be of the same type.

JIRA: SFDCSPT-126, 9/28/2020</description>
        <inlineHelpText>Auto-populated by Outreach. Will display &quot;1&quot; when a record is synced from Outreach to Salesforce.</inlineHelpText>
        <label>Synced from Outreach</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Industry__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>A contact who works in a target industry</description>
        <inlineHelpText>A contact who works in a target industry</inlineHelpText>
        <label>Target Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Persona__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>A contact who is the target persona</description>
        <inlineHelpText>A contact who is the target persona</inlineHelpText>
        <label>Target Persona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TempMailingAddress__c</fullName>
        <description>Temporarily Used To Replicate Data From the Mailing Address Field.</description>
        <formula>MailingStreet</formula>
        <label>TempMailingAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempMailingCity__c</fullName>
        <description>Temporarily Used To Replicate Data From the Mailing City Field.</description>
        <formula>MailingCity</formula>
        <label>TempMailingCity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempMailingCountry__c</fullName>
        <description>Temporarily Used To Replicate Data From the Mailing Country Field.</description>
        <formula>MailingCountry</formula>
        <label>TempMailingCountry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempMailingPostalCode__c</fullName>
        <description>Temporarily Used To Replicate Data From the Mailing Postal Code Field.</description>
        <formula>MailingPostalCode</formula>
        <label>TempMailingPostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempMailingState__c</fullName>
        <description>Temporarily Used To Replicate Data From the Mailing State Field.</description>
        <formula>MailingState</formula>
        <label>TempMailingState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Frame_1__c</fullName>
        <label>Time Frame 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Territory_Contact__c</fullName>
        <description>Field that populates the US territory based off of the mailing state</description>
        <formula>IF(ISBLANK(MailingState ), &quot; &quot;, 

IF(CONTAINS(&quot;Alaska:Hawaii:California:Washington:Oregon:Idaho:Nevada:Arizona:Utah:Wyoming:Montana:Colorado:New Mexico&quot;, MailingState ), &quot;West&quot;, 

IF(CONTAINS(&quot;South Dakota:North Dakota:Nebraska:Kansas:Oklahoma:Texas:Louisiana:Arkansas:Missouri:Iowa:Minnesota:Wisconsin:Illinois:Tennessee:Mississippi:Alabama:Michigan:Indiana&quot;, MailingState ), &quot;Central&quot;, 

IF(CONTAINS(&quot;Maine:Vermont:New Hampshire:Massachusetts:Connecticut:Pennsylvania:New York:New Jersey:Delaware:Washington DC:Maryland:West Virginia:Virginia:North Carolina:South Carolina:Georgia:Florida:Kentucky:Ohio:Rhode Island:District of Columbia:Puerto Rico&quot;, MailingState ), &quot;East&quot;, 

&quot; &quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US Territory (Contact)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Contact_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Contacts that were presented to the user at the time they created it.</description>
        <label>Contact Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Current_Endpoint__c</fullName>
        <label>Current Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__EnrichedOn__c</fullName>
        <label>EnrichedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Lead_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Leads that were presented to the user at the time they created it.</description>
        <label>Lead Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__RingLead_App_Field__c</fullName>
        <label>RingLead App Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__RingLead_Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Ringlead_Id__c</fullName>
        <label>Ringlead Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case_Type__c</fullName>
        <label>Use Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Query_Activity__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the relative volume of queries an AuraDB user has run over the past 14 days. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the relative volume of queries an AuraDB user has run over the past 14 days. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>User Query Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below Average</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Usage_Cadence__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the relative volume of queries an AuraDB user has run over the past 14 days. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the relative volume of queries an AuraDB user has run over the past 14 days. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>User Usage Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk_Tickets_Submitted_last_30_days__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the number of support tickets that an AuraDB user has submitted over the past 30 days. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo. JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the number of support tickets that an AuraDB user has submitted over the past 30 days. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Zendesk Tickets Submitted (last 30 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appirio_core__Last_Access_Date__c</fullName>
        <description>Contains a timestamp for the most recent &quot;login&quot; of this feature user, to be used for PIN expiration.</description>
        <label>Last Access Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>appirio_core__Licensed_Features__c</fullName>
        <label>Licensed Features</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Timecard Only</fullName>
                </value>
                <value>
                    <fullName>Expenses Only</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>appirio_core__PIN__c</fullName>
        <description>Used to authenticate feature-only users to the Sites pages</description>
        <label>PIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name_FT__c</fullName>
        <label>Ad Campaign Name (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name_LC__c</fullName>
        <label>Ad Campaign Name (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__BizibleId__c</fullName>
        <label>BizibleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_FT__c</fullName>
        <label>Landing Page (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_LC__c</fullName>
        <label>Landing Page (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_FT__c</fullName>
        <description>Type of marketing activity</description>
        <inlineHelpText>Type of marketing activity</inlineHelpText>
        <label>Marketing Channel (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_LC__c</fullName>
        <description>Type of marketing activity</description>
        <inlineHelpText>Type of marketing activity</inlineHelpText>
        <label>Marketing Channel (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date_FT__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date (FT)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date_LC__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date (LC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source_FT__c</fullName>
        <description>The name of the referrer</description>
        <inlineHelpText>The name of the referrer</inlineHelpText>
        <label>Touchpoint Source (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source_LC__c</fullName>
        <description>The name of the referrer</description>
        <inlineHelpText>The name of the referrer</inlineHelpText>
        <label>Touchpoint Source (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfox_first_name__c</fullName>
        <description>Data fox first name contact</description>
        <label>DF First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfox_last_name__c</fullName>
        <description>Datafox Last Name Contact</description>
        <label>DF Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfox_phone__c</fullName>
        <description>Datafox Phone Contact</description>
        <label>DF Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>iSell__Avention_ID__c</fullName>
        <description>Unique contact identifier (not currently implemented).</description>
        <label>D&amp;B Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>Marketo Acquisition Date</description>
        <inlineHelpText>Marketo Acquisition Date</inlineHelpText>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>Marketo Acquisition Program</description>
        <inlineHelpText>Marketo Acquisition Program</inlineHelpText>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <description>Marketo Inferred City</description>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <description>Marketo Inferred Company</description>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <description>Marketo Inferred Country</description>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <description>Marketo Inferred Metropolitan Area</description>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
        <description>Marketo Inferred Phone Area Code</description>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <description>Marketo Inferred Postal Code</description>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_State_Region__c</fullName>
        <description>Marketo Inferred State Region</description>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <description>Marketo Lead Score</description>
        <inlineHelpText>Marketo Lead Score</inlineHelpText>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Engine__c</fullName>
        <label>Original Seach Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Id__c</fullName>
        <label>Marketo Lead ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign_Mobile?contactType=Contact&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Mkto_Lead_Score__c</fullName>
        <label>Mkto Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/Contact_Full_List?id=&quot; &amp; Id, IMAGE(&quot;https://www.marketo.com/salesforce/images/applicationLink.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>psa_report__Hist_Sch_Utilization__c</fullName>
        <formula>(  pse__Hist_Sch_Utilization_Billable_Hours__c  +  pse__Hist_Sch_Utilization_Credited_Hours__c  )  /  (  pse__Historical_Utilization_Calendar_Hours__c  -  pse__Hist_Sch_Utilization_Excluded_Hours__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hist Sch Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>psa_report__Resource_Name__c</fullName>
        <formula>FirstName &amp;&quot; &quot;&amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__API_Resource_Correlation_Id__c</fullName>
        <externalId>true</externalId>
        <label>API Resource Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Action_Calculate_Utilization__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action: Calculate Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Update_Current_Time_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action: Update Current Time Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Update_Date__c</fullName>
        <label>Actuals: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actuals: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Timecards_Without_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if resource should be treated as  &apos;Global&apos; Resources.
&apos;Global&apos; Resources can enter time for any Project, even if that Project normally requires Assignments for Time Entry.</description>
        <inlineHelpText>Check this if resource should be treated as  &apos;Global&apos; Resources.
&apos;Global&apos; Resources can enter time for any Project, even if that Project normally requires Assignments for Time Entry.</inlineHelpText>
        <label>Allow Timecards Without Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bookings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period_End_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Current Time Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Current Time Period For Resources</relationshipLabel>
        <relationshipName>CurrentTimePeriodForResources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Default_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Cost Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Cost_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Default Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__ERP_Worker_Correlation_Id__c</fullName>
        <description>This records the worker correlation key used within the Foundations system.</description>
        <externalId>true</externalId>
        <inlineHelpText>This records the worker correlation key used within the erp system.</inlineHelpText>
        <label>Foundations Worker Correlation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Employment_Status_Effective_Date__c</fullName>
        <inlineHelpText>The date the resource&apos;s employment status becomes effective.</inlineHelpText>
        <label>Employment Status Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Employment_Status__c</fullName>
        <inlineHelpText>The resource&apos;s employment status.</inlineHelpText>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Missing_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to exclude this resource from missing timecard reports</description>
        <label>Exclude From Missing Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Time_Calculations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the user should be excluded from timecard calculations like utilization</inlineHelpText>
        <label>Exclude From Time Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Time_Variance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the resource is excluded from Time Variance calculations.</description>
        <inlineHelpText>If true, the resource is excluded from Time Variance calculations.</inlineHelpText>
        <label>Exclude From Time Variance Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Resource_Planner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to exclude this resource from the resource planner.</inlineHelpText>
        <label>Exclude from Resource Planner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Excluded_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__External_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>External Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__External_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Billable_Hours__c</fullName>
        <description>The historical scheduled utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Credited_Hours__c</fullName>
        <description>The historical scheduled utilization credited hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Excluded_Hours__c</fullName>
        <description>The historical scheduled utilization excluded hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Held_Hours__c</fullName>
        <label>Hist Sch Utilization Held Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hist_Sch_Utilization_Non_Billable_Hrs__c</fullName>
        <description>The historical scheduled utilization non-billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Hist Sch Utilization Non Billable Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Billable_Hours__c</fullName>
        <description>The historical utilization billable hours total for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Historical Utilization Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>